# coc

./: .gitignore  README.md  db.sqlite3  pyproject.toml
coc/: asgi.py  celery.py  coc_sdk.py  settings.py  urls.py  utils.py  wsgi.py
v1/: models.py  tasks.py  views.py
v1/migrations/: 0001_initial.py
